Key:
+ Added Content/Feature.
~ Changed Content/Feature or Bugfix.
- Removed Content/Feature.

~~~~~~~~~~~~0.0.1 Revitalize 10-13-2022 xx.xx P.M~~~~~~~~~~~~~~
+Added silo refill item to Hay Maker Shop.
+Added silo refill item to Marnie's shop.
-Removed selling the HayMaker from Marnie's shop
+Added the Hay Feed Shop item to Marnie's shop when a teir two barn or coop is built.


~~~~~~~~~~~~0.0.1 Revitalize 10-13-2022 xx.xx P.M~~~~~~~~~~~~~~
~ Hay maker now uses the common recipe format used for other machines for it's inputs.
~ Fixed an issue where the hay maker would process items for forever.
~ Fixed an issues where hay makers would take too many items when inputing for processing.
~ Fixed an issue where if you right clicked a hay maker with an input item in your hand, and there was still some left after inputting and they were edible, it would always bring up the "Do you want to eat" dialogue.

~~~~~~~~~~~~0.0.1 Revitalize 10-12-2022 xx.xx P.M~~~~~~~~~~~~~~
+Added code to add items to Mr. Qi's walnut room shop.
+Added Nuclear Furnace blueprints to the Walnut room shop.
+Added Magical Furnace blueprints to the Walnut room shop.

~~~~~~~~~~~~0.0.1 Revitalize 10-11-2022 xx.xx P.M~~~~~~~~~~~~~~
~ Moved hard coded strings from ElectricFurnace.cs to separate .json files.
~ Fixed a bug where smelting an object with not enough fuel would not consume the input and give the smelted object for free.

~~~~~~~~~~~~0.0.1 Revitalize 10-09-2022 xx.xx P.M~~~~~~~~~~~~~~
+AutomaticFarmingSystems can now harvest from ResourceBushes.
~Finished migrating all objects to use their display strings in the .json files in the ModAssets/Strings/Objects folder and sub folder.
+Added in Coal Resource Bushes.
+Dwarf now sells all resource bushes. 25% chance for coal and copper, 20% for iron and gold, 15% for Iridium, and 10% for Radioactive.

~~~~~~~~~~~~0.0.1 Revitalize 10-08-2022 xx.xx P.M~~~~~~~~~~~~~~
+Cleaned up some code regarding save data for shops.