@@ -18,6 +18,9 @@ namespace Omegasis.Revitalize.Framework.Configs.ShopConfigs
         /// </summary>
         public int HayMakerFeedShopPrice = 10000;
 
+        /// <summary>
+        /// The cost for buying the hay maker blueprints from Marnie's ranch.
+        /// </summary>
         public int HayMakerBlueprintsPrice = 2500;
         public AnimalShopStockConfig()
         {
