@@ -7,6 +7,6 @@
 	"Revitalize.Framework.World.Objects.Farming.HayMakerFeedShop":
 	{
 		"displayName":"Portable Hay Shop",
-		"description":"Used to buy hay at any time with a slightly increased price due to a convienience fee."
+		"description":"Used to buy hay at any time with a slightly increased price due to a convenience fee."
 	},
 }
